src/test/resources/testinput/parsable/symtab/invalid_coco/let3.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl let3 {
  context Auction a inv Time3:
    let
      min = a.closingTime.lessThan(a.finishTime) ? a.closingTime : a.finishTime;
      min2 = a.startTime.lessThan(min) ? a.startTime : min
    in
      min2 == a.startTime;
}
